no longer tracking served code in local dev env; added helper js functions to disable hover functions on bottom instagram photos on mobile/tablet widths

--- a/dev/styles/04-sections/03-celebrating-mastery.scss
+++ b/dev/styles/04-sections/03-celebrating-mastery.scss
@@ -1,5 +1,5 @@
 /* ************************************************** */
-/* Celebrating Mastery Styles */
+/*            Celebrating Mastery Styles              */
 /* ************************************************** */
 
 .mastery__img-container h1,h2,h3,h4,h5,h6,p {
@@ -61,7 +61,7 @@
 .mastery__btn {
   background: $duvel-red;
   border: none;
-  border-radius: 2px;
+  border-radius: 6px;
   color: #fff;
   cursor: pointer;
   font-family: 'Roboto Condensed', sans-serif;
